Add splash for post

--- a/_posts/2021-02-01-intro.md
+++ b/_posts/2021-02-01-intro.md
@@ -3,4 +3,6 @@ title: "First test post"
 layout: single
 published: true
 ---
+header:
+    image: /assets/images/splash.jpg
 Hi! I have nothing useful to post yet.
