Not a splash image

--- a/_posts/2021-06-01-dev-books-2021.md
+++ b/_posts/2021-06-01-dev-books-2021.md
@@ -3,7 +3,7 @@ title: "My developer's reference book collection 2021!"
 layout: single
 published: true
 ---
-![splash](/assets/images/dev_books_2021.jpg)
+![alt](/assets/images/dev_books_2021.jpg)
 During the last year or so, since we have all been struck by the 
 "pandemic phenomenon", I've had to re-examine my knowledge of
 software development and engineering. One of the things I started to realise 
