--- a/_posts/2021-06-01-dev-books-2021.md
+++ b/_posts/2021-06-01-dev-books-2021.md
@@ -3,7 +3,10 @@ title: "My developer's reference book collection 2021!"
 layout: single
 published: true
 ---
-![alt](/assets/images/dev_books_2021.jpg)
+<figure class="single">
+    <a href="/assets/images/dev_books_2021.jpg"><img src="/assets/images/dev_books_2021.jpg"></a>
+    <figcaption>Reference book collection</figcaption>
+</figure>
 During the last year or so, since we have all been struck by the 
 "pandemic phenomenon", I've had to re-examine my knowledge of
 software development and engineering. One of the things I started to realise 
@@ -17,3 +20,4 @@ I never really understood how to design and craft good software from scratch. I 
 didn't understand why some software are so robust, easy to use and have minimal maintanance overhead
 while other pieces of software had constant issues, maintanance nightmares and constant 
 refactoring.
+
