--- a/_posts/2021-06-01-dev-books-2021.md
+++ b/_posts/2021-06-01-dev-books-2021.md
@@ -9,17 +9,15 @@ published: true
 </figure>
 
 
-During the last year or so, since we have all been struck by the 
-"pandemic phenomenon", I've had to re-examine my knowledge of
-software development and engineering. One of the things I started to realise 
-as I took a step back was that I needed to understand software on a more 
-wholesome level. 
+So, I thought I'd share some details about the collection of reference books
+that I have accumulated over the last year or so. These are quite handy to have
+and help me become a better software developer. I also think its important to
+be aware of best practices, and take a step back to learn about topics that are outside
+your normal work.
 
-What the hell do I mean by that? Well for starters, as someone who spends
-a lot of time coding, I was not actually a good software developer. I had 
-a fair understanding of algorithms, math, data structures, computing and software but
-I never really understood how to design and craft good software from scratch. I also
-didn't understand why some software are so robust, easy to use and have minimal maintanance overhead
-while other pieces of software had constant issues, maintanance nightmares and constant 
-refactoring.
+So here goes!
 
+1. C++ Primer (5th Edition) by Lipman et al. - A great book for beginner and intermediate level C++
+engineers. The book covers most fundamental concepts in detail, and has a really good set of excercises
+and problems that will get you started right away. Although it doesn't go much into the powerful aspects
+of modern C++, it covers the language essentials in good detail.
