--- a/_posts/2021-06-01-dev-books-2021.md
+++ b/_posts/2021-06-01-dev-books-2021.md
@@ -9,15 +9,36 @@ published: true
 </figure>
 
 
-So, I thought I'd share some details about the collection of reference books
+So, I thought I'd share some details and personal comments about the collection of reference books
 that I have accumulated over the last year or so. These are quite handy to have
 and help me become a better software developer. I also think its important to
 be aware of best practices, and take a step back to learn about topics that are outside
-your normal work.
+your normal work. Since I work in machine learning, the programming languages of interest to 
+me are mainly C++ and Python, with additional languages such as Go, Julia and a smattering of others.
 
 So here goes!
 
 1. C++ Primer (5th Edition) by Lipman et al. - A great book for beginner and intermediate level C++
-engineers. The book covers most fundamental concepts in detail, and has a really good set of excercises
+developers. The book covers most fundamental concepts in detail, and has a really good set of excercises
 and problems that will get you started right away. Although it doesn't go much into the powerful aspects
 of modern C++, it covers the language essentials in good detail.
+
+2. Effective Modern C++ by Scott Meyers - C++ has evolved quite a bit from the old C++98. Today most organisations
+use C++14 and onwards, which is usually referred to as Modern C++ since there are quite a few enhancements to 
+the language, like smart pointers for example. This book is a must have if you are a serious C++ programmer, 
+and wish to make use of these features correctly. The book is definitely a handy reference, 
+since most of the ideas can be understood on the first read, but you would find yourself constantly 
+referring to the examples when you wish to use those features in code.
+
+3. Effective Python by Brett Slatkin - This book is a really nice collection of ways to use Python better.
+Python is a simple and easy to use language, and even new programmers would feel fairly comfortable programming 
+in Python. However, there is a lot more to Python that can really make you craft sound codebases. These are not
+just a collection of best practices, but also make you think about design and modularity of code. There are especially
+many tips to make code more readable, less prone to bugs and hence improves the overall maintainability of large codebases.
+
+4. Design Patterns: Elements of Reusable Object-Oriented Software by Gamma et al. - Design patterns are 
+super useful for professional developers. So its kind of like a cookbook but with example recipes, 
+discussing commonly occurring problems in software, where the recipes are reference implementations of design patterns.
+These templates can then then be modified and used to address similar problems in your own codebase.
+Learning about these design patterns also sharpens your nose for picking up on areas where your code could use
+a re-design.
