--- a/_posts/2021-06-01-dev-books-2021.md
+++ b/_posts/2021-06-01-dev-books-2021.md
@@ -18,25 +18,25 @@ me are mainly C++ and Python, with additional languages such as Go, Julia and a 
 
 So here goes!
 
-1. C++ Primer (5th Edition) by Lipman et al. - A great book for beginner and intermediate level C++
+1. **C++ Primer (5th Edition) by Lipman et al.** - A great book for beginner and intermediate level C++
 developers. The book covers most fundamental concepts in detail, and has a really good set of excercises
 and problems that will get you started right away. Although it doesn't go much into the powerful aspects
 of modern C++, it covers the language essentials in good detail.
 
-2. Effective Modern C++ by Scott Meyers - C++ has evolved quite a bit from the old C++98. Today most organisations
+2. **Effective Modern C++ by Scott Meyers** - C++ has evolved quite a bit from the old C++98. Today most organisations
 use C++14 and onwards, which is usually referred to as Modern C++ since there are quite a few enhancements to 
 the language, like smart pointers for example. This book is a must have if you are a serious C++ programmer, 
 and wish to make use of these features correctly. The book is definitely a handy reference, 
 since most of the ideas can be understood on the first read, but you would find yourself constantly 
 referring to the examples when you wish to use those features in code.
 
-3. Effective Python by Brett Slatkin - This book is a really nice collection of ways to use Python better.
+3. **Effective Python by Brett Slatkin** - This book is a really nice collection of ways to use Python better.
 Python is a simple and easy to use language, and even new programmers would feel fairly comfortable programming 
 in Python. However, there is a lot more to Python that can really make you craft sound codebases. These are not
 just a collection of best practices, but also make you think about design and modularity of code. There are especially
 many tips to make code more readable, less prone to bugs and hence improves the overall maintainability of large codebases.
 
-4. Design Patterns: Elements of Reusable Object-Oriented Software by Gamma et al. - Design patterns are 
+4. **Design Patterns: Elements of Reusable Object-Oriented Software by Gamma et al.** - Design patterns are 
 super useful for professional developers. So its kind of like a cookbook but with example recipes, 
 discussing commonly occurring problems in software, where the recipes are reference implementations of design patterns.
 These templates can then then be modified and used to address similar problems in your own codebase.
