--- a/_posts/2021-06-01-dev-books-2021.md
+++ b/_posts/2021-06-01-dev-books-2021.md
@@ -24,7 +24,7 @@ and problems that will get you started right away. Although it doesn't go much i
 of modern C++, it covers the language essentials in good detail.
 
 2. **Effective Modern C++ by Scott Meyers** - C++ has evolved quite a bit from the old C++98. Today most organisations
-use C++14 and onwards, which is usually referred to as Modern C++ since there are quite a few enhancements to 
+use C++14 and onwards, which is usually referred to as "modern C++" since there are quite a few enhancements to 
 the language, like smart pointers for example. This book is a must have if you are a serious C++ programmer, 
 and wish to make use of these features correctly. The book is definitely a handy reference, 
 since most of the ideas can be understood on the first read, but you would find yourself constantly 
@@ -42,3 +42,10 @@ discussing commonly occurring problems in software, where the recipes are refere
 These templates can then then be modified and used to address similar problems in your own codebase.
 Learning about these design patterns also sharpens your nose for picking up on areas where your code could use
 a re-design.
+
+5. **Clean Code by Robert C. Martin** - This book is perhaps the most general in the collection. If software engineering
+is a religion then this book is kind of like a bible. It articulates principles of writing good code, and 
+taking responsibility for various actions as a developer. In most professional roles, a developer usually ends up accruing
+technical debt by crafting bad code, due to time limitations and other constraints. This book covers such scenarios and helps
+identify where you can do better, right from the start. Most of the examples are in Java, but the examples are straight-forward 
+and the underlying principles transcend any single launguage and can be applied everywhere.
