--- a/_posts/2021-06-01-dev-books-2021.md
+++ b/_posts/2021-06-01-dev-books-2021.md
@@ -48,4 +48,4 @@ is a religion then this book is kind of like a bible. It articulates principles 
 taking responsibility for various actions as a developer. In most professional roles, a developer usually ends up accruing
 technical debt by crafting bad code, due to time limitations and other constraints. This book covers such scenarios and helps
 identify where you can do better, right from the start. Most of the examples are in Java, but the examples are straight-forward 
-and the underlying principles transcend any single launguage and can be applied everywhere.
+and the underlying principles transcend any single language and can be applied everywhere.
