Add refactoring book

--- a/_posts/2021-06-01-dev-books-2021.md
+++ b/_posts/2021-06-01-dev-books-2021.md
@@ -49,3 +49,10 @@ taking responsibility for various actions as a developer. In most professional r
 technical debt by crafting bad code, due to time limitations and other constraints. This book covers such scenarios and helps
 identify where you can do better, right from the start. Most of the examples are in Java, but the examples are straight-forward 
 and the underlying principles transcend any single language and can be applied everywhere.
+
+6. **Refactoring by Martin Fowler** - Ok this is one of the latest acquisitions, so I haven't gone through it much to be honest.
+But from skimming through the book, it seems to present an organised approach to refactoring and cleaning up existing code.
+Now, we all refactor code all the time, but in most cases we don't stop to check how the addition or modification
+affects other internal parts which may be connected. Hence, refactoring code in a more principled way by taking extra
+care about the internal structure and mechanics is quite important, and this book gives many such example refactorings. 
+Definitely a nice addition to the reference book collection!
