Add linux handbook to book collection

--- a/_posts/2021-06-01-dev-books-2021.md
+++ b/_posts/2021-06-01-dev-books-2021.md
@@ -56,3 +56,11 @@ Now, we all refactor code all the time, but in most cases we don't stop to check
 affects other internal parts which may be connected. Hence, refactoring code in a more principled way by taking extra
 care about the internal structure and mechanics is quite important, and this book gives many such example refactorings. 
 Definitely a nice addition to the reference book collection!
+
+7. **UNIX and Linux System Administration Handbook, 5th Edition by Evi Nemeth et al.** - A reference book collection is 
+incomplete without a handbook on linux. I like to get the best out of developing on linux, and most often I need to work with
+large datasets and hence use different storage systems. Knowing how to work efficiently with file-systems can really make a
+difference in productivity since you can use a lot of built-in tools or linux packages to solve your problems. Installing 
+software and packages on linux systems is also a useful skill and knowing how to debug issues related to the OS are invaluable. It is
+also really useful to have a good reference book to help deal with networking issues, for example while developing 
+applications that involve using a client-server model of communication.
