Fix bullet list

--- a/_posts/2021-12-06-hsse-tips.md
+++ b/_posts/2021-12-06-hsse-tips.md
@@ -21,6 +21,6 @@ published: true
 
 6. **Other captain obvious things** - 
     
-    **Excercise**
-    **Timely breaks**
-    **Smooth dev environment**
+    - **Excercise**
+    - **Timely breaks**
+    - **Smooth dev environment**
