--- a/_posts/2021-12-06-hsse-tips.md
+++ b/_posts/2021-12-06-hsse-tips.md
@@ -12,25 +12,25 @@ published: true
 1. **Stay connected with friends and family** -
 
 <figure class="single">
-    <a href="/assets/images/connected.jpg"><img src="/assets/images/hsse.jpg"></a>
+    <a href="/assets/images/connected.jpg"><img src="connected.jpg"></a>
 </figure>
 
 2. **House plants** - 
 
 <figure class="single">
-    <a href="/assets/images/plant.jpg"><img src="/assets/images/hsse.jpg"></a>
+    <a href="/assets/images/plant.jpg"><img src="/assets/images/plant.jpg"></a>
 </figure>
 
 3. **Paintings and interior decor** - 
 
 <figure class="single">
-    <a href="/assets/images/kurzgesagt.jpg"><img src="/assets/images/hsse.jpg"></a>
+    <a href="/assets/images/kurzgesagt.jpg"><img src="/assets/images/kurzgesagt.jpg"></a>
 </figure>
 
 4. **Spicy food** - 
 
 <figure class="single">
-    <a href="/assets/images/spicy.jpg"><img src="/assets/images/hsse.jpg"></a>
+    <a href="/assets/images/spicy.jpg"><img src="/assets/images/spicy.jpg"></a>
 </figure>
 
 5. **Side projects and hobbies** - 
