--- a/_posts/2021-12-06-hsse-tips.md
+++ b/_posts/2021-12-06-hsse-tips.md
@@ -12,7 +12,7 @@ published: true
 1. **Stay connected with friends and family** -
 
 <figure class="single">
-    <a href="/assets/images/connected.jpg"><img src="connected.jpg"></a>
+    <a href="/assets/images/connected.jpg"><img src="/assets/images/connected.jpg"></a>
 </figure>
 
 2. **House plants** - 
