--- a/_posts/2021-12-06-hsse-tips.md
+++ b/_posts/2021-12-06-hsse-tips.md
@@ -9,33 +9,33 @@ published: true
 </figure>
 
 
-1. **Stay connected with friends and family** -
+- **Stay connected with friends and family**
 
 <figure class="single">
     <a href="/assets/images/connected.jpg"><img src="/assets/images/connected.jpg"></a>
 </figure>
 
-2. **House plants** - 
+- **House plants**
 
 <figure class="single">
     <a href="/assets/images/plant.jpg"><img src="/assets/images/plant.jpg"></a>
 </figure>
 
-3. **Paintings and interior decor** - 
+- **Paintings and interior decor**
 
 <figure class="single">
     <a href="/assets/images/kurzgesagt.jpg"><img src="/assets/images/kurzgesagt.jpg"></a>
 </figure>
 
-4. **Spicy food** - 
+- **Spicy food**
 
 <figure class="single">
     <a href="/assets/images/spicy.jpg"><img src="/assets/images/spicy.jpg"></a>
 </figure>
 
-5. **Side projects and hobbies** - 
+- **Side projects and hobbies**
 
-6. **Other captain obvious things** - 
+- **Other captain obvious things**
     
     - **Excercise**
     - **Timely breaks**
