--- a/_posts/2021-12-06-hsse-tips.md
+++ b/_posts/2021-12-06-hsse-tips.md
@@ -1,5 +1,5 @@
 ---
-title: "Tips for coping with uncertainty, WFH, and improving mental health"
+title: "Tips for WFH, coping with uncertainty"
 layout: single
 published: true
 ---
@@ -35,8 +35,21 @@ published: true
 
 - **Side projects and hobbies**
 
+<figure class="single">
+    <a href="/assets/images/sideprojects.jpg"><img src="/assets/images/sideprojects.jpg"></a>
+</figure>
+
+<figure class="single">
+    <a href="/assets/images/hobbies.jpg"><img src="/assets/images/hobbies.jpg"></a>
+</figure>
+
 - **Other captain obvious things**
     
     - **Excercise**
+
+    <figure class="single">
+        <a href="/assets/images/biking.jpg"><img src="/assets/images/biking.jpg"></a>
+    </figure>
+
     - **Timely breaks**
     - **Smooth dev environment**
