Add pics for break, dev env

--- a/_posts/2021-12-06-hsse-tips.md
+++ b/_posts/2021-12-06-hsse-tips.md
@@ -52,4 +52,13 @@ published: true
     </figure>
 
     - **Timely breaks**
+
+    <figure class="single">
+        <a href="/assets/images/clocks.jpg"><img src="/assets/images/clocks.jpg"></a>
+    </figure>
+
     - **Smooth dev environment**
+
+    <figure class="single">
+        <a href="/assets/images/dev_env.jpg"><img src="/assets/images/dev_env.jpg"></a>
+    </figure>
